# PeiyangRobot-infantry

./: .gitignore  .gitmodules  CMakeLists.txt  chassis_driver_pid.jdebug
Infantry-Chassis/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  infantry_chassis.ioc
Infantry-Chassis/Core/Inc/: stm32h7xx_it.h  tim.h  tusb_config.h
Infantry-Chassis/Core/Src/: fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  usb_otg.c
Infantry-Chassis/MDK-ARM/: infantry_chassis.uvoptx  infantry_chassis.uvprojx
Infantry-Chassis/MDK-ARM/infantry_chassis/: infantry_chassis.hex
Solution/: app-main.cpp  main.cpp
Solution/Adapter/: adapter-remote.h
Solution/Application/: app-can.cpp  app-can.h  app-host.cpp  app-host.h  app-imu.cpp  app-imu.h  app-led.cpp  app-led.h  movtion-ctrl-app.cpp  movtion-ctrl-app.h
Solution/Board-Support-Pack/: board-config.h
Solution/Board-Support-Pack/BMI088/: dev-bmi-cmd.h  dev-bmi-comm.h  dev-bmi-def.h  dev-bmi.cpp  dev-bmi.h  iio-adapter.h
Solution/Board-Support-Pack/DR16/: dr16.cpp  dr16.h
Solution/Board-Support-Pack/USB/: usb-descriptors.c
Solution/Config/: config.h
Solution/Config/Gimbal/: algo-config.h  hw-config.h
Solution/System/: crtp.h  defs.h
Solution/System/DataHub/: blackboard.h  data-def.h  seq-variable.h
Solution/System/IIO-Channel/: iio-device.h  iio-type.h
Solution/System/IPC/: blackboard.h  datahub.h  messages.h  subscriber.h  topic.h
Solution/System/Input/: action.h  control.h  triggers.h
Solution/tools/: crtp.h
infantry-Gimbal/: .mxproject  CMakeLists.txt  infantry_gimbal.ioc
(+31 files in other folders)
